--- a/lesson1/exercises/src/app/app.component.html
+++ b/lesson1/exercises/src/app/app.component.html
@@ -1,19 +1,26 @@
-<div class="container">
+<div class="content">
+  <page-title></page-title>
+  <div class="container">
     <div class="row justify-content-center">
       <div class="col-3">
         <movie-list></movie-list>
       </div>
-  
+
       <div class="col-3">
-        <p>No content here yet...</p>
+        <fav-photos></fav-photos>
       </div>
-  
+
       <div class="col-3">
-        <p>No content here yet...</p>
+        <chores-list></chores-list>
       </div>
     </div>
   </div>
+  <hr>
+
+  <fav-links></fav-links><br>
+
+  <div class="image">
+  <img src="https://media4.giphy.com/media/V4NSR1NG2p0KeJJyr5/giphy.gif?cid=ecf05e4749v9vwjyxjr86lhh0vxre41ukgg8dzmh2n5xe7va&rid=giphy.gif&ct=g">
+  </div>
   
-  <chores-list></chores-list>
-  
-  <fav-photos></fav-photos>
+</div>
