--- a/lesson2/examples/ngif-practice/src/app/chores/chores.component.html
+++ b/lesson2/examples/ngif-practice/src/app/chores/chores.component.html
@@ -1,14 +1,37 @@
-<div class="chores">
+<div class="chores" *ngIf = 'chores.length > finishedChores.length; else gettingChoresDone'>
     <h3>Chores</h3>
     <ul>
         <li *ngFor = 'let chore of chores'>{{chore}}</li>
     </ul>
+    <p style="color:blue">Work harder!</p>
 </div>
+<ng-template class="chores" #gettingChoresDone>
+    <h3>Chores</h3>
+    <ul>
+        <li *ngFor = 'let chore of chores'>{{chore}}</li>
+    </ul>
+</ng-template>
 <hr>
-<div class="doneChores">
+<div class="doneChores" *ngIf = 'chores.length === 0 || finishedChores.length === chores.length + 3; else noMoneyYet'>
     <h3>Done Chores</h3>
     <ul>
         <li *ngFor = 'let done of finishedChores'>{{done}}</li>
     </ul>
+    <img src="{{targetImage}}">
 </div>
+<ng-template class="doneChores" #noMoneyYet>
+    <h3>Done Chores</h3>
+    <ul>
+        <li *ngFor = 'let done of finishedChores'>{{done}}</li>
+    </ul>
+    <p>No allowance yet.</p>
+</ng-template>
 <hr>
+<div class="iceCream" *ngIf = 'chores.length === 0 && doneChores.length >= 4 else noIceCream'>
+    <h1>Ice cream treat!</h1>
+</div>
+<ng-template #noIceCream>
+    <h1>To earn an ice cream treat:</h1>
+    <p>The chores list must be empty.</p>
+    <p>The Done list must have at least 4 items.</p>
+</ng-template>
