added code for input practice

--- a/lesson2/examples/input-practice/src/app/movie-list/movie-list.component.html
+++ b/lesson2/examples/input-practice/src/app/movie-list/movie-list.component.html
@@ -1,8 +1,13 @@
 <div class='movies col-4'>
-    <h3>Movies to Watch</h3>
-    <ol>
-       <li *ngFor ="let movie of movies">{{movie}}</li>
-    </ol>
-    <hr>
-
- </div>
+   <h3>Movies to Watch</h3>
+   <ol>
+      <li *ngFor="let movie of movies">{{movie}}</li>
+   </ol>
+   <hr>
+   <input #newMovie (keyup.enter)="error = addMovie(newMovie.value); newMovie.value = ''" type="text"
+      placeholder="Enter Movie Title Here" />
+   <button (click)="error = addMovie(newMovie.value); newMovie.value = ''">Add</button>
+</div>
+<div class="error" *ngIf='error'>
+   <p>{{error}}</p>
+</div>
