--- a/lesson3/examples/src/app/buttons/buttons.component.html
+++ b/lesson3/examples/src/app/buttons/buttons.component.html
@@ -2,8 +2,12 @@
    <h3>{{buttonHeading}}</h3>
    <button [class.gold]="!goldButton" [disabled]="goldButton" (click)="goldButton = true">Gold</button> <br>
    <button [class.silver]="!silverButton" [disabled]="silverButton" (click)="silverButton = true">Silver</button> <br>
-   <button [class.copper]="!copperButton" [disabled]="copperButton" (click)="copperButton = true">Copper</button> <hr>
-   <button (click)="reactivate()">Reactivate Buttons</button> <hr>
+   <button [class.copper]="!copperButton" [disabled]="copperButton" (click)="copperButton = true">Copper</button>
+   <hr>
+   <button (click)="reactivate()">Reactivate Buttons</button>
+   <hr>
    <h3>{{jokeHeading}}</h3>
-   <button class="gold" [disabled]="jokeButton" (mouseenter)="jokeButton = !jokeButton" (mouseleave)="jokebutton = jokeButton">Try and Click Me</button>
+   <div (mouseout)="active = true">
+      <button [class.gold]="active" [disabled]="!active" (mouseenter)="active = false">Try and Click Me</button>
+   </div>
 </div>
